# pynir

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  pynir.rst
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pynir.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  pynir.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/pynir/: Calibration.html  CalibrationTransfer.html  utils.html
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pynir.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pynir.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pynir/: Calibration.html  CalibrationTransfer.html  FeatureSelection.html  OutlierDection.html  Preprocessing.html  utils.html
docs/_build/html/_sources/: modules.rst.txt
examples/: Demo10_calibrationTransfer_PFCE_simulateNIR.py  Demo11_calibrationTransfer_PFCE_Tablet.py  Demo12_calibrationTransfer_PFCE_Corn.py  Demo1_SimulateNIR.py  Demo2_Regression.py  Demo3_Binary_Classification.py  Demo4_Multiclass_Classification.py  Demo5_dataPreprocessing.py  Demo6_outierDection.py  Demo6_outlierDetection.py  Demo7_FeatureSelection_oneStep.py  Demo8_FeatureSelection_multiSteps.py  Demo9_calibrationTransfer.py
src/pynir/: Calibration.py  CalibrationTransfer.py  FeatureSelection.py  OutlierDection.py  OutlierDetection.py  Preprocessing.py  Reader.py  utils.py
src/pynir/demo_data/csv_InnoSpectra/: demo0.csv  demo1.csv  demo2.csv
src/pynir/demo_data/spa_unknown/: demo0.spa  demo1.spa  demo2.spa
tests/: Data_Corn.mat  Demo10_calibrationTransfer_PFCE_simulateNIR.py  Demo1_SimulateNIR.py  Demo3_Binary_Classification.py  Demo4_Multiclass_Classification.py  Demo5_dataPreprocessing.py  Demo6_outierDection.py  Demo9_calibrationTransfer.py
